# Signapse

./: Doxyfile  README.md  generate_docs.bat  requirements.txt  setup.cfg
App/Android/TSD/app/: CMakeLists.txt  build.gradle
App/Android/TSD/app/src/androidTest/java/de/swp/tsd/trafficsigndetection/: ExampleInstrumentedTest.java
App/Android/TSD/app/src/main/: AndroidManifest.xml
App/Android/TSD/app/src/main/cpp/: native-lib.cpp  native-lib.cppold
App/Android/TSD/app/src/main/java/de/swp/tsd/trafficsigndetection/: MainActivity.java  TSDAboutFragment.java  TSDAutoFocusMode.java  TSDBaseCamera.java  TSDCameraCharacter.java  TSDCameraManager.java  TSDCameraOutputFormat.java  TSDCutOffSpeedTracker.java  TSDDebugFragment.java  TSDDetectorFragment.java  TSDDisclaimerFragment.java  TSDDrawable.java  (+27 more)
App/Android/TSD/app/src/main/res/drawable/: vz1001_30.xml  vz1001_31.xml  vz1001_32.xml  vz1001_33.xml  vz1001_34.xml  vz1001_35.xml  vz1004_30.xml  vz1004_31.xml  vz103_10.xml  vz103_20.xml  vz1040_30.xml  vz1040_31.xml  vz1040_34.xml  vz1040_35.xml  vz1040_36.xml  vz1042_30.xml  vz1042_31.xml  vz1042_32.xml  vz1042_33.xml  vz1042_34.xml  vz1042_35.xml  vz1042_38.xml  vz1042_51.xml  vz1042_53.xml  vz1053_35.xml  vz105_10.xml  vz105_20.xml  vz120.xml  vz121_10.xml  vz121_20.xml  vz123.xml  vz131.xml  vz133.xml  vz134.xml  vz136.xml  vz274_1.xml  vz274_10.xml  vz274_100.xml  vz274_110.xml  vz274_120.xml  (+39 more)
App/Android/TSD/app/src/main/res/layout/: activity_main.xml  disclaimer_document.xml  disclosure_document.xml  fragment_about.xml  fragment_debug.xml  fragment_detector.xml  fragment_disclaimer.xml  fragment_disclosure.xml  fragment_license.xml  fragment_privacy.xml  fragment_settings.xml  fragment_setup.xml  license_item.xml  menu.xml  navigation_item.xml  privacy_document.xml  sign_card.xml
App/Android/TSD/app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
App/Android/TSD/app/src/main/res/values-de/: strings.xml
RoadSignAPI_Standalone/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  rsapi
RoadSignAPI_Standalone/flatbuffers/: code_generators.cpp  flatc.cpp  flatc_main.cpp  flathash.cpp  idl_gen_cpp.cpp  idl_gen_fbs.cpp  idl_gen_general.cpp  idl_gen_go.cpp  idl_gen_grpc.cpp  idl_gen_js.cpp  idl_gen_json_schema.cpp  idl_gen_php.cpp  idl_gen_python.cpp  idl_gen_text.cpp  idl_parser.cpp  reflection.cpp  test.cpp  util.cpp
RoadSignAPI_Standalone/header_files/FilterManagementLibrary/: Utilities.h
RoadSignAPI_Standalone/header_files/FilterManagementLibrary/TensorflowIntegration/: NeuronalNetworkImageProcessSettings.h  TensorflowNNInstance.h  TensorflowNNInstanceClassifier.h
RoadSignAPI_Standalone/header_files/FilterManagementLibrary/TensorflowIntegration/image_helpers/: image_helpers.h  image_helpers_impl.h
RoadSignAPI_Standalone/header_files/FilterManagementLibrary/TensorflowIntegration/label_helpers/: get_top_n.h  get_top_n_impl.h
RoadSignAPI_Standalone/source_files/FilterManagementLibrary/: Utilities.cpp
RoadSignAPI_Standalone/source_files/FilterManagementLibrary/TensorflowIntegration/: TensorflowNNInstance.cpp  TensorflowNNInstanceClassifier.cpp
RoadSignAPI_Standalone/source_files/FilterManagementLibrary/TensorflowIntegration/image_helpers/: image_helpers.cc
RoadSignAPI_Standalone/tensorflow/include/flatbuffers/: base.h  code_generators.h  flatbuffers.h  flexbuffers.h  grpc.h  hash.h  idl.h  minireflect.h  reflection.h  reflection_generated.h  util.h
RoadSignAPI_Standalone/tensorflow/include/tensorflow/contrib/lite/: BUILD
RoadSignAPI_Standalone/tensorflow/include/tensorflow/contrib/lite/schema/: upgrade_schema.py  upgrade_schema_test.py
RoadSignAPI_Standalone_Tensorflow/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  _10_introduction.dox  codesnippets.cpp  labels.pbtxt  labels_classifier.pbtxt  main.cpp  mainold.cpp
RoadSignAPI_Standalone_Tensorflow/build_for_android/: set_ndk_path_and_make.sh
RoadSignAPI_Standalone_Tensorflow/build_for_android/jni/: .gitignore  Android (Kopie).mk  Android.mk  Android.mkold  main.cpp  tensorflow_jni.cc  tensorflow_jni.cc~
RoadSignAPI_Standalone_Tensorflow/header_files/FilterManagementLibrary/: Logger.h  TensorflowAndroidJNIUtils.h  TensorflowOpenCVUtils.h  Utilities.h
RoadSignAPI_Standalone_Tensorflow/header_files/FilterManagementLibrary/PipeSystem/: PipeFilter.h  PipeRegisteredFilters.h  PipeWorkingDataSet.h  ProcessingPipeline.h  TFNNBasedPipeFilter.h
RoadSignAPI_Standalone_Tensorflow/header_files/FilterManagementLibrary/TensorflowIntegration/: TensorflowNNInstance.h  TensorflowNNInstanceClassifier.h  TensorflowNNModelDescription.h  TensorflowResultContainer.h
RoadSignAPI_Standalone_Tensorflow/header_files/RoadSignAPI/: DetectedSignCombination.h  DetectedSignDescriptor.h  RoadSignAPI.h
RoadSignAPI_Standalone_Tensorflow/header_files/RoadSignAPI/Filters/: ClassifiedSignsGrouper.h  DetectionBasedImageSlicer.h  MobilenetV2RoadSignClassificator.h  RoadSignDuplicationDeleter.h  SSDLiteRoadSignDetector.h
RoadSignAPI_Standalone_Tensorflow/header_files/RoadSignAPI/RSAPIPipeRegisteredFilters/: RSAPIPipeRegisteredFilters.h
RoadSignAPI_Standalone_Tensorflow/header_files/RoadSignAPI/RSAPIWorkingDataSet/: RSAPIWorkingDataSet.h
RoadSignAPI_Standalone_Tensorflow/source_files/FilterManagementLibrary/: Logger.cpp  TensorflowAndroidJNIUtils.cpp  TensorflowOpenCVUtils.cpp  Utilities.cpp
RoadSignAPI_Standalone_Tensorflow/source_files/FilterManagementLibrary/PipeSystem/: PipeFilter.cpp  ProcessingPipeline.cpp  TFNNBasedPipeFilter.cpp
RoadSignAPI_Standalone_Tensorflow/source_files/FilterManagementLibrary/TensorflowIntegration/: TensorflowNNInstance.cpp  TensorflowNNInstanceClassifier.cpp  TensorflowResultContainer.cpp
RoadSignAPI_Standalone_Tensorflow/source_files/RoadSignAPI/: DetectedSignCombination.cpp  RoadSignAPI.cpp
RoadSignAPI_Standalone_Tensorflow/source_files/RoadSignAPI/Filters/: ClassifiedSignsGrouper.cpp  DetectionBasedImageSlicer.cpp  MobilenetV2RoadSignClassificator.cpp  RoadSignDuplicationDeleter.cpp  SSDLiteRoadSignDetector.cpp
(+169 files in other folders)
